# AST-Analyzer

./: .copier-answers.yml  .gitignore  Makefile  README.md  development.md  pyproject.toml  usage.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/ast_analyzer/: ASTNode.py  __init__.py  analyzer.py  main.py  parser.py  reporter.py  utils.py
src/ast_analyzer/classes/: AnalysisResult.py  NodeVisitors.py  __init__.py
src/ast_analyzer/decorators/: logger.py  timer.py
src/ast_analyzer/generators/: file_traversal.py
tests/: conftest.py  test_analyzer.py  test_astnode.py  test_parser.py  test_reporter.py  test_utils.py
tests/classes/: test_analysisresult.py
tests/decorators/: test_logger.py  test_timer.py
tests/generators/: test_file_traversal.py
